# Mini-API-TODO

./: .env.template  README.md  pyproject.toml
src/: dependencies.py  main.py  middlewares.py
src/controllers/: __init__.py
src/controllers/tasks/: route.py
src/core/: config.py  database.py  logger.py
src/repositories/tasks/: base_repository.py  in_memory_repository.py
src/schemas/: base.py  exceptions.py  tasks.py
src/services/: tasks_service.py
