[project]
name = "mini-api-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]

[tool.ruff.lint]
ignore = ["E203", "E266", "E501", "C408", "B010", "F401", "C901", "B008"]
select = ["B", "C", "E", "F", "W", "B9", "I", "SIM"]

[tool.ruff.lint.isort]
force-single-line = true
